--- a/store/templates/store/product_list.html
+++ b/store/templates/store/product_list.html
@@ -12,7 +12,7 @@
         <div class="card-body d-flex flex-column">
           <h5 class="card-title">{{ product.name }}</h5>
           <p class="card-text">{{ product.description|truncatechars:100 }}</p>
-          <p class="card-text mt-auto"><strong>${{ product.price_cents|floatformat:2 }}</strong></p>
+          <p class="card-text mt-auto"><strong>€{{ product.price|floatformat:2 }}</strong></p>
           <a href="{% url 'store:product_detail' product.pk %}" class="btn btn-primary">View Details</a>
         </div>
       </div>
