--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -1,33 +1,22 @@
-{% extends "account/base_entrance.html" %}
-{% load i18n allauth account %}
-{% block head_title %}
-    {% trans "Password Reset" %}
-{% endblock head_title %}
+{% extends "base.html" %}
+{% load allauth i18n %}
+{% block title %}Password Reset – FitLife Hub{% endblock %}
 {% block content %}
-    {% element h1 %}
-        {% trans "Password Reset" %}
-    {% endelement %}
-    {% if user.is_authenticated %}
-        {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
-    {% element p %}
-        {% trans "Forgotten your password? Enter your email address below, and we'll send you an email allowing you to reset it." %}
-    {% endelement %}
-    {% url 'account_reset_password' as reset_url %}
-    {% element form form=form method="post" action=reset_url %}
-        {% slot body %}
-            {% csrf_token %}
-            {% element fields form=form %}
-            {% endelement %}
-            {{ redirect_field }}
-        {% endslot %}
-        {% slot actions %}
-            {% element button type="submit" %}
-                {% trans 'Reset My Password' %}
-            {% endelement %}
-        {% endslot %}
-    {% endelement %}
-    {% element p %}
-        {% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}
-    {% endelement %}
-{% endblock content %}
+<div class="row justify-content-center">
+  <div class="col-md-6 col-lg-5">
+    <div class="card shadow-sm border-0 mt-5">
+      <div class="card-body p-4">
+        <h2 class="mb-3 text-center">{% trans "Password Reset" %}</h2>
+        <form method="post" action="{% url 'account_reset_password' %}">
+          {% csrf_token %}
+          {{ form|crispy }}
+          <button type="submit" class="btn btn-primary w-100 mt-3">{% trans "Send Reset Email" %}</button>
+        </form>
+        <p class="mt-3 text-center">
+          <a href="{% url 'account_login' %}">{% trans "Back to login" %}</a>
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock %}
