--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -1,18 +1,16 @@
-{% extends "account/base_entrance.html" %}
-{% load i18n %}
-{% load allauth %}
-{% load account %}
-{% block head_title %}
-    {% trans "Password Reset" %}
-{% endblock head_title %}
+{% extends "base.html" %}
+{% load allauth i18n %}
+{% block title %}Password Reset Sent – FitLife Hub{% endblock %}
 {% block content %}
-    {% element h1 %}
-        {% trans "Password Reset" %}
-    {% endelement %}
-    {% if user.is_authenticated %}
-        {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
-    {% element p %}
-        {% blocktrans %}We have sent you an email. If you have not received it please check your spam folder. Otherwise contact us if you do not receive it in a few minutes.{% endblocktrans %}
-    {% endelement %}
-{% endblock content %}
+<div class="row justify-content-center">
+  <div class="col-md-6 col-lg-5">
+    <div class="card shadow-sm border-0 mt-5">
+      <div class="card-body p-4 text-center">
+        <h2 class="mb-3">{% trans "Check Your Email" %}</h2>
+        <p>{% trans "We've emailed you instructions for setting your password. You should receive the email shortly!" %}</p>
+        <a href="{% url 'account_login' %}" class="btn btn-primary mt-3">{% trans "Back to login" %}</a>
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock %}
