--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,20 +1,18 @@
-{% extends "base.html" %}
-{% load allauth i18n %}
-{% block title %}Sign Up – FitLife Hub{% endblock %}
-{% block content %}
+{% extends "base.html" %} {% load allauth i18n %} {% block title %}Sign Up –FitLife Hub{% endblock %} {% block content %}
 <div class="row justify-content-center">
   <div class="col-md-6 col-lg-5">
     <div class="card shadow-sm border-0 mt-5">
       <div class="card-body p-4">
         <h2 class="mb-3 text-center">{% trans "Create Your Account" %}</h2>
         <form method="post" action="{% url 'account_signup' %}">
-          {% csrf_token %}
-          {{ form|crispy }}
-          {{ redirect_field }}
-          <button type="submit" class="btn btn-primary w-100 mt-3">{% trans "Sign Up" %}</button>
+          {% csrf_token %} {{ form|crispy }} {{ redirect_field }}
+          <button type="submit" class="btn btn-primary w-100 mt-3">
+            {% trans "Sign Up" %}
+          </button>
         </form>
         <p class="mt-3 text-center">
-          {% trans "Already have an account?" %} <a href="{% url 'account_login' %}">{% trans "Sign in" %}</a>
+          {% trans "Already have an account?" %}
+          <a href="{% url 'account_login' %}">{% trans "Sign in" %}</a>
         </p>
       </div>
     </div>
