--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
-{% load allauth i18n %}
+{% load i18n %}
+{% load allauth %}
 {% block title %}Sign In – FitLife Hub{% endblock %}
 {% block content %}
 <div class="row justify-content-center">
@@ -14,10 +15,11 @@
           <button type="submit" class="btn btn-primary w-100 mt-3">{% trans "Sign In" %}</button>
         </form>
         <p class="mt-3 text-center">
-          {% trans "Don't have an account?" %} <a href="{% url 'account_signup' %}">{% trans "Sign up" %}</a>
+          <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
         </p>
-        <p class="mt-2 text-center">
-          <a href="{% url 'account_reset_password' %}">{% trans "Forgot password?" %}</a>
+        <p class="mt-3 text-center">
+          {% trans "Don't have an account?" %}
+          <a href="{% url 'account_signup' %}">{% trans "Sign up" %}</a>
         </p>
       </div>
     </div>
