--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load allauth i18n %}
+{% load i18n %}
 {% block title %}Sign Out – FitLife Hub{% endblock %}
 {% block content %}
 <div class="row justify-content-center">
@@ -7,13 +7,12 @@
     <div class="card shadow-sm border-0 mt-5">
       <div class="card-body p-4 text-center">
         <h2 class="mb-3">{% trans "Sign Out" %}</h2>
-        <p>{% trans 'Are you sure you want to sign out?' %}</p>
+        <p>{% trans "Are you sure you want to sign out?" %}</p>
         <form method="post" action="{% url 'account_logout' %}">
           {% csrf_token %}
-          {{ redirect_field }}
-          <button type="submit" class="btn btn-danger w-100">{% trans 'Sign Out' %}</button>
+          <button type="submit" class="btn btn-danger w-100 mt-3">{% trans "Sign Out" %}</button>
         </form>
-        <a href="{% url 'account_login' %}" class="btn btn-link mt-3">{% trans "Back to login" %}</a>
+        <a href="/" class="btn btn-link mt-3">{% trans "Cancel" %}</a>
       </div>
     </div>
   </div>
