--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
-{% load allauth i18n %}
+{% load i18n %}
 {% block title %}Password Reset Sent – FitLife Hub{% endblock %}
 {% block content %}
 <div class="row justify-content-center">
   <div class="col-md-6 col-lg-5">
     <div class="card shadow-sm border-0 mt-5">
       <div class="card-body p-4 text-center">
-        <h2 class="mb-3">{% trans "Check Your Email" %}</h2>
-        <p>{% trans "We've emailed you instructions for setting your password. You should receive the email shortly!" %}</p>
+        <h2 class="mb-3">{% trans "Password Reset Sent" %}</h2>
+        <p>{% trans "We have sent you an email with instructions to reset your password." %}</p>
         <a href="{% url 'account_login' %}" class="btn btn-primary mt-3">{% trans "Back to login" %}</a>
       </div>
     </div>
