--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -1,46 +1,34 @@
-{% extends "account/base_entrance.html" %}
+{% extends "base.html" %}
 {% load i18n %}
 {% load allauth %}
-{% block head_title %}
-    {% trans "Change Password" %}
-{% endblock head_title %}
+{% block head_title %}{% trans "Change Password" %}{% endblock head_title %}
 {% block content %}
-    {% element h1 %}
-        {% if token_fail %}
+<div class="row justify-content-center">
+  <div class="col-md-6 col-lg-5">
+    <div class="card shadow-sm border-0 mt-5">
+      <div class="card-body p-4">
+        <h2 class="mb-3 text-center">
+          {% if token_fail %}
             {% trans "Bad Token" %}
-        {% else %}
+          {% else %}
             {% trans "Change Password" %}
-        {% endif %}
-    {% endelement %}
-    {% if token_fail %}
-        {% url 'account_reset_password' as passwd_reset_url %}
-        {% element p %}
-            {% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}
-        {% endelement %}
-    {% else %}
-        {% element form method="post" action=action_url %}
-            {% slot body %}
-                {% csrf_token %}
-                {{ redirect_field }}
-                {% element fields form=form %}
-                {% endelement %}
-            {% endslot %}
-            {% slot actions %}
-                {% element button type="submit" name="action" %}
-                    {% trans 'Change Password' %}
-                {% endelement %}
-                {% element button type="submit" form="logout-from-stage" tags="link,cancel" %}
-                    {% translate "Cancel" %}
-                {% endelement %}
-            {% endslot %}
-        {% endelement %}
-    {% endif %}
-    {% if not cancel_url %}
-        <form id="logout-from-stage"
-              method="post"
-              action="{% url 'account_logout' %}">
-            <input type="hidden" name="next" value="{% url 'account_login' %}">
+          {% endif %}
+        </h2>
+        {% if token_fail %}
+          {% url 'account_reset_password' as passwd_reset_url %}
+          <p class="text-danger text-center">
+            {% blocktrans %}The password reset link was invalid, possibly because it has already been used. Please <a href="{{ passwd_reset_url }}">request a new password reset</a>.{% endblocktrans %}
+          </p>
+        {% else %}
+          <form method="post" action="{{ action_url }}">
             {% csrf_token %}
-        </form>
-    {% endif %}
-{% endblock content %}
+            {{ redirect_field }}
+            {{ form|crispy }}
+            <button type="submit" class="btn btn-primary w-100 mt-3">{% trans "Change Password" %}</button>
+          </form>
+        {% endif %}
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock %}
