--- a/templates/account/password_reset_from_key_done.html
+++ b/templates/account/password_reset_from_key_done.html
@@ -1,14 +1,16 @@
-{% extends "account/base_entrance.html" %}
+{% extends "base.html" %}
 {% load i18n %}
-{% load allauth %}
-{% block head_title %}
-    {% trans "Change Password" %}
-{% endblock head_title %}
+{% block head_title %}{% trans "Change Password" %}{% endblock head_title %}
 {% block content %}
-    {% element h1 %}
-        {% trans "Change Password" %}
-    {% endelement %}
-    {% element p %}
-        {% trans 'Your password is now changed.' %}
-    {% endelement %}
-{% endblock content %}
+<div class="row justify-content-center">
+  <div class="col-md-6 col-lg-5">
+    <div class="card shadow-sm border-0 mt-5">
+      <div class="card-body p-4 text-center">
+        <h2 class="mb-3">{% trans "Password Changed" %}</h2>
+        <p>{% trans 'Your password is now changed.' %}</p>
+        <a href="{% url 'account_login' %}" class="btn btn-primary mt-3">{% trans "Back to login" %}</a>
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock %}
