--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -1,25 +1,21 @@
-{% extends "account/base_manage_password.html" %}
+{% extends "base.html" %}
 {% load allauth i18n %}
-{% block head_title %}
-    {% trans "Change Password" %}
-{% endblock head_title %}
+{% block title %}Change Password – FitLife Hub{% endblock %}
 {% block content %}
-    {% element h1 %}
-        {% trans "Change Password" %}
-    {% endelement %}
-    {% url 'account_change_password' as action_url %}
-    {% element form form=form method="post" action=action_url %}
-        {% slot body %}
-            {% csrf_token %}
-            {{ redirect_field }}
-            {% element fields form=form %}
-            {% endelement %}
-        {% endslot %}
-        {% slot actions %}
-            {% element button type="submit" %}
-                {% trans "Change Password" %}
-            {% endelement %}
-            <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-        {% endslot %}
-    {% endelement %}
-{% endblock content %}
+<div class="row justify-content-center">
+  <div class="col-md-6 col-lg-5">
+    <div class="card shadow-sm border-0 mt-5">
+      <div class="card-body p-4">
+        <h2 class="mb-3 text-center">{% trans "Change Password" %}</h2>
+        <form method="post" action="{% url 'account_change_password' %}">
+          {% csrf_token %}
+          {{ redirect_field }}
+          {{ form|crispy }}
+          <button type="submit" class="btn btn-primary w-100 mt-3">{% trans "Change Password" %}</button>
+        </form>
+        <a href="{% url 'account_reset_password' %}" class="btn btn-link mt-3">{% trans "Forgot Password?" %}</a>
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock %}
